Setup for tshoji demo

--- a/Native_app_setup/native_app/provider_setup/staged_files/ors-config.yml
+++ b/Native_app_setup/native_app/provider_setup/staged_files/ors-config.yml
@@ -6,7 +6,7 @@ ors:
   engine:
     profile_default:
       build:  
-        source_file: /home/ors/files/SanFrancisco.osm.pbf
+        source_file: /home/ors/files/NewYork.osm.pbf
         instructions: false
         service:
         maximum_visited_nodes: 1000000000
@@ -16,6 +16,10 @@ ors:
       cycling-road:
         enabled: true
       driving-hgv:
+        enabled: true
+      cycling-electric:
+        enabled: true
+      foot-walking:
         enabled: true
   endpoints:
     matrix:
